* ship.AIScript
* ship.AIScriptWakeTime
* ship.autoWeapons
* ship.beaconLabel
* ship.cargoList
* ship.crew
* ship.destinationSystem
* ship.dockingInstructions
* ship.energyRechargeRate
* ship.exhaustEmissiveColor
* ship.exhausts
* ship.extraCargo
* ship.flashers
* ship.homeSystem
* ship.isFleeing
* ship.isMinable
* ship.isTurret
* ship.markedForFines
* ship.shipClassName
* ship.shipUniqueName
* station.allegiance
* station.market[*].legalPenalty
* sun.name
* system.allDemoShips
* system.populatorSettings
* system.stations
* system.waypoints
* system.wormholes
* visualeffect.beaconLabel
* wormhole.arrivalTime
* wormhole.destination
* wormhole.expiryTime
* wormhole.origin

New methods:
------------
* Ship.keys() (static method)
* Ship.keysForRole(role) (static method)
* Ship.roleIsInCategory(role,category) (static method)
* Ship.roles() (static method)
* Ship.shipDataForKey(key) (static method)
* dock.isQueued(ship)
* player.endScenario(key)
* player.ship.hideHUDSelector(selector)
* player.ship.setMultiFunctionDisplay(index,key)
* player.ship.setMultiFunctionText(key, string)
* player.ship.showHUDSelector(selector)
* ship.becomeCascadeExplosion()
* ship.broadcastCascadeImminent()
* ship.broadcastDistressMessage()
* ship.checkCourseToDestination()
* ship.checkScanner()
* ship.damageAssessment()
* ship.dumpCargo (change to specify how many items to dump)
* ship.enterWormhole(hole)
* ship.findNearestStation()
* ship.getSafeCourseToDestination()
* ship.markTargetForFines()
* ship.notifyGroupOfWormhole()
* ship.offerToEscort(mother)
* ship.patrolReportIn(station)
* ship.performAttack()
* ship.performCollect()
* ship.performEscort()
* ship.performFaceDestination()
* ship.performFlee()
* ship.performFlyToRangeFromDestination()
* ship.performHold()
* ship.performIdle()
* ship.performIntercept()
* ship.performLandOnPlanet()
* ship.performMining()
* ship.performScriptedAI()
* ship.performScriptedAttackAI()
* ship.performStop()
* ship.performTumble()